Update installation instructions
Kanjinator now provides a more lightweight jar for linux and a fully
fledged msi installer for windows